fix aligned buttons for code blocks

--- a/web/app.css
+++ b/web/app.css
@@ -634,8 +634,8 @@ pre.HyperMD-codeblock-begin {
     position: absolute;
     right: 8px;
     top: 5px;
-    width: 15px;
-    height: 15px;
+    width: 17px;
+    height: 17px;
     padding: 0;
     border: none;
     cursor: pointer;
